.provarCaches/00D5f000005vwGkEAI/objects/rstk__syrecinit__c.object
<CustomObject>
    <description>syrecinit__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_adjclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl inventory adjustment clearing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_apacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl accrued ap account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ccdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>commodity code description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_cmpno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default company number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_comcod__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default commodity code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_cosacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl cost of sales account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_cosclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl cost of sales clearing accoun</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_dfltdept__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default production department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_dfltlabgrd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default labor grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_dfltorgid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Organization ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_dfltprocno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default process number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_dfltwctr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default work center</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_div__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_divdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default division description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_divtxfracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl division to division transfer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_divvaracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl division to division transfer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_expacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl expense account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ff_company__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default FF Company Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_homecurr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>home currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_invacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl inventory account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_invnnacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl inventory non nettable accoun</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_item__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default &apos;system startup&apos; item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_itemdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default item description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_labclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl labor clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_negvaracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl negative inventory variance a</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ohdfrngclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl ohd fringe clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ohdlabclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl ohd labor clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ohdmachclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl ohd machine clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ohdmtlclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl ohd mtl clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_orgdesc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default organization description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_othclracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl other clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_posubwipacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl subcontract wip account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_ppvacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl ppv account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_rcptlocid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Receiving Location ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_rcvgacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl receiving clearing account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_rcvgtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default receiving routing</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_respusrclockno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default responsible user clock number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_scrapacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl inventory scrap account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_shiplocid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Default Shipping Location ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_site__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default site</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_stdchgvaracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl standards change variance acc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_uom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default unit of measure</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_wipacct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl wip account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__syrecinit_wovaracct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>default gl work order variance account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>SYRECINIT</label>
    <nameField>
        <label>SYRECINIT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYRECINITs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>